Correction z-index pour searchbox

--- a/frontend/src/components/trip/trip.css
+++ b/frontend/src/components/trip/trip.css
@@ -1,25 +1,36 @@
-  body {
-      margin: 0;
+body {
+    margin: 0;
   }
+ 
   [id^=map] {
-      width: 0;
-      height: 0;
-      background-color:transparent;
-      display: none;
+    width: 0;
+    height: 0;
+    background-color: transparent;
+    display: none;
   }
+ 
   [id^=search-box] {
-      padding-left: 500px;
-      padding-top: 20px;
-      width: 800px;
-      height: 100px;
-      text-align: center;
+    padding-bottom: 20px;
+    width: 100%;
   }
+ 
+  [id=search-box2] {
+    z-index: 1;
+  }
+ 
   [id^=result] {
-      padding-left: 20px;
-      padding-top: 20px;
-      width: 800px;
-      height: 100px;
+    padding-left: 20px;
+    padding-top: 20px;
   }
+ 
+  [class^=leaflet-locationiq-control] {
+    width: 100%;
+  }
+ 
   [class^=leaflet-locationiq-results] {
     top: 55px !important;
+  }
+ 
+  #textsup {
+    text-align: left;
   }
